# GestureRecognition_Control

./: .gitignore  DEMO_COMMANDS.md  README.md  start_body_pose_control.sh  start_key_mouse_control.sh  修改记录.txt
src/course_pkg/: CMakeLists.txt  package.xml  readme.txt
src/course_pkg/config/: course_car_view.rviz
src/course_pkg/gazebo_models/cafe_table/: model.sdf
src/course_pkg/gazebo_models/table/: model.sdf
src/course_pkg/gazebo_models/table_marble/: model.sdf
src/course_pkg/gazebo_models/wood_cube_18cm/: model.config  model.sdf
src/course_pkg/gazebo_models/wood_cube_1cm/: model.config  model.sdf
src/course_pkg/gazebo_models/wood_cube_2cm/: model.config  model.sdf
src/course_pkg/gazebo_models/wood_cube_8cm/: model.config  model.sdf
src/course_pkg/launch/: demo.launch  demo1.launch  demo_pose_teleop.launch  demo_tb3_keyboard_control.launch  demo_tb3_open_manip_pose_course.launch
src/course_pkg/scripts/: cmd_vel_scan_avoid.py  fetch_gazebo_models.sh  gen_scaled_robot_description.sh  scale_urdf_for_course.py
src/course_pkg/urdf/xacro/: move.urdf.xacro  my_base.urdf  my_base.urdf.xacro  my_camera.urdf.xacro  my_car_camera.urdf.xacro  my_laser.urdf.xacro  my_sensors_kinect.urdf.xacro
src/course_pkg/worlds/: pose_course.world  simple_course.world
src/handcontrol/: CMakeLists.txt  README.md  package.xml  requirements.txt
src/handcontrol/launch/: body_pose_only.launch  hand_action_demo.launch  handcontrol.launch  key_mouse_teleop.launch  teleop_only.launch  vision_align_demo.launch  vision_grasp_demo.launch  vision_target_detector.launch
src/handcontrol/msg/: BodyPose.msg
src/handcontrol/scripts/: body_pose_estimation.py  hand_action_demo.py  initial_arm_pose.py  key_mouse_teleop.py  list_usb_cameras.py  manip_teleop_bridge.py  record_pose_test_video.py  reset_gazebo_scene.py  teleop_mapper.py  vision_align_controller.py  vision_target_detector.py
src/handcontrol_sim/: CMakeLists.txt  package.xml
